Added prettier configuration

--- a/Playwright/Playwright-U/package.json
+++ b/Playwright/Playwright-U/package.json
@@ -10,5 +10,8 @@
     "playwright"
   ],
   "author": "Daniel Cadena",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prettier": "^2.7.1"
+  }
 }
